# product-attribute

./: .copier-answers.yml  README.md  test-requirements.txt
product_attribute_archive/: README.rst  __manifest__.py
product_attribute_archive/i18n/: es.po  it.po  product_attribute_archive.pot
product_attribute_archive/readme/: CONTRIBUTORS.md
product_attribute_archive/views/: product_attribute.xml
product_category_active/: README.rst  __manifest__.py
product_category_active/i18n/: ca.po  es.po  hr.po  it.po  product_category_active.pot  pt.po
product_category_active/models/: product_category.py
product_category_active/readme/: CONTRIBUTORS.md
product_category_active/tests/: test_product_category_active.py
product_category_active/views/: product_views.xml
product_logistics_uom/: README.rst  __manifest__.py  hooks.py
product_logistics_uom/i18n/: de.po  es.po  it.po  product_logistics_uom.pot  pt_BR.po
product_logistics_uom/models/: product_template.py
product_logistics_uom/readme/: CONTRIBUTORS.md
product_logistics_uom/views/: product.xml  res_config_settings.xml
product_main_supplierinfo/: README.rst  __manifest__.py
product_main_supplierinfo/i18n/: fr.po  it.po  product_main_supplierinfo.pot
product_main_supplierinfo/models/: product_product.py
product_main_supplierinfo/readme/: CONTRIBUTORS.md
product_main_supplierinfo/tests/: test_product_main_supplier.py
product_manufacturer/: README.rst  __manifest__.py
product_manufacturer/i18n/: bs.po  hr.po  lt.po  pl.po  product_manufacturer.pot  ru.po  sl.po  sr.po
product_manufacturer/readme/: CONTRIBUTORS.md
product_medical/: README.rst  __manifest__.py
product_medical/data/: in_vitro_diagnostic_data.xml  (+2 more)
product_net_weight/: README.rst  __manifest__.py
product_packaging_dimension/: README.rst  __manifest__.py
product_packaging_level/: README.rst  __manifest__.py
product_pricelist_fixed_currency_rate/: README.rst  __manifest__.py
product_pricelist_supplierinfo/: README.rst  __manifest__.py
product_print_category/: README.rst  __manifest__.py
product_sale_manufactured_for/: README.rst  __manifest__.py
product_sequence/: README.rst  __manifest__.py
product_set/: README.rst  __manifest__.py
product_state/: README.rst  __manifest__.py
product_state_sale/: README.rst  __manifest__.py
product_state_stock_base/: README.rst  __manifest__.py
product_status/: README.rst  __manifest__.py
product_stock_state/: README.rst  __manifest__.py
product_supplierinfo_archive/: README.rst  __manifest__.py
product_supplierinfo_revision/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
stock_production_lot_expired_date/: README.rst
uom_category_active/: README.rst  __manifest__.py
(+250 files in other folders)
